[package]
name = "jupiter-para-runtime"
version = "0.1.0"
authors = ["Patract <https://github.com/patractlabs/patract>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { version = "2.0.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }
serde = { version = "1.0.119", optional = true, features = ["derive"] }
static_assertions = "1.1.0"
hex = { version = "0.4.2", optional = true }

# Substrate primitives
sp-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-block-builder = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1",default-features = false }
sp-consensus-aura = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1",default-features = false }
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1",default-features = false }
sp-inherents = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1",default-features = false }
sp-io = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1",default-features = false }
sp-offchain = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1",default-features = false }
sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1",default-features = false }
sp-session = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1",default-features = false }
sp-std = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1",default-features = false }
sp-transaction-pool = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1",default-features = false }
sp-version = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1",default-features = false }

# Substrate pallets
frame-executive = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1",default-features = false }
frame-support = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1",default-features = false }
frame-system = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1",default-features = false }
frame-system-rpc-runtime-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1",default-features = false }
pallet-authorship = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1",default-features = false }
pallet-randomness-collective-flip = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1",default-features = false }
pallet-sudo = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1",default-features = false }
pallet-offences = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1",default-features = false }
pallet-timestamp = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1",default-features = false }
pallet-indices = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1",default-features = false }
pallet-balances = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1",default-features = false }
pallet-transaction-payment = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1",default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1",default-features = false }
pallet-utility = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1",default-features = false }
pallet-multisig = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1",default-features = false }

# contracts
pallet-contracts = { path = "../../vendor/substrate/frame/contracts", default-features = false }
pallet-contracts-primitives = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1",default-features = false }
pallet-contracts-rpc-runtime-api = { version = "0.8.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1",default-features = false }

# Cumulus dependencies
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1", default-features = false }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1", default-features = false }
cumulus-pallet-xcm-handler = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1", default-features = false }

# Polkadot dependencies
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1", default-features = false }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1", default-features = false }
xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1", default-features = false }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1", default-features = false }

# local runtime module
patract-primitives = { path = "../../primitives", default-features = false }
patract-runtime-common = { path = "../common", default-features = false }
patract-chain-extension = { path = "../../primitives/chain-extension", default-features = false, features = [ "native-support" ] }

# Jupiter Pallets
randomness_collect = { path = "../../pallets/randomness_collect", default-features = false }
curve = { git = "https://github.com/patractlabs/megaclite.git", package = "megaclite-arkworks", default-features = false }

[build-dependencies]
substrate-wasm-builder = { version = "4.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde",
    "hex",

    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-io/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std",

    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "frame-system-rpc-runtime-api/std",

    "pallet-authorship/std",
    "pallet-randomness-collective-flip/std",
    "pallet-sudo/std",
    "pallet-offences/std",
    "pallet-timestamp/std",
    "pallet-indices/std",
    "pallet-balances/std",
    "pallet-transaction-payment/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-utility/std",
    "pallet-multisig/std",
    "pallet-contracts/std",
    "pallet-contracts-primitives/std",
    "pallet-contracts-rpc-runtime-api/std",

    "parachain-info/std",
    "cumulus-pallet-parachain-system/std",
    "cumulus-primitives-core/std",
    "cumulus-pallet-xcm-handler/std",

    "polkadot-parachain/std",
    "xcm/std",
    "xcm-builder/std",
    "xcm-executor/std",

    "patract-primitives/std",
    "patract-runtime-common/std",
    "patract-chain-extension/std",

    "randomness_collect/std",
]
