[package]
name = "jupiter-pilot-runtime"
version = "0.1.0"
authors = ["Patract <https://github.com/patractlabs/patract>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
static_assertions = "1.1.0"

# Substrate primitives
sp-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-block-builder = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-consensus-babe = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-consensus-vrf = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-authority-discovery = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-inherents = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-io = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-offchain = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-session = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-std = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-transaction-pool = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-version = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }

# Substrate pallets
frame-executive = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
frame-support = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
frame-system = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
frame-system-rpc-runtime-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-authorship = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-authority-discovery = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-babe = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-balances = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-collective = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-democracy = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-grandpa = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-im-online = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-identity = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-membership = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-multisig = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-offences = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-proxy = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-scheduler = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-session = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false, features = ["historical"] }
pallet-sudo = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-transaction-payment = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-treasury = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-bounties = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-tips = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-timestamp = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-utility = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }

# vendor modules
# pallet-contracts = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-contracts = { path = "../../vendor/substrate/frame/contracts", default-features = false }
pallet-contracts-primitives = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-contracts-rpc-runtime-api = { version = "0.8.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }

# local pallet define
pallet-randomness-provider = { path = "../../pallets/randomness-provider", default-features = false }
pallet-poa = { path = "../../pallets/poa", default-features = false }
pallet-poa-rpc-runtime-api = { path = "../../pallets/poa/rpc/runtime-api", default-features = false }

# local runtime module
patract-primitives = { path = "../../primitives", default-features = false }
patract-runtime-common = { path = "../common", default-features = false }
patract-chain-extension = { path = "../../primitives/chain-extension", default-features = false, features = [ "native-support" ] }

[build-dependencies]
substrate-wasm-builder = { version = "4.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde",

    "sp-authority-discovery/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-babe/std",
    "sp-consensus-vrf/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-io/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std",

    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "frame-system-rpc-runtime-api/std",

    "pallet-authority-discovery/std",
    "pallet-authorship/std",
    "pallet-babe/std",
    "pallet-balances/std",
    "pallet-collective/std",
    "pallet-contracts/std",
    "pallet-contracts-primitives/std",
    "pallet-contracts-rpc-runtime-api/std",
    "pallet-democracy/std",
    "pallet-grandpa/std",
    "pallet-im-online/std",
    "pallet-identity/std",
    "pallet-membership/std",
    "pallet-multisig/std",
    "pallet-offences/std",
    "pallet-proxy/std",
    "pallet-sudo/std",
    "pallet-scheduler/std",
    "pallet-session/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-treasury/std",
    "pallet-bounties/std",
    "pallet-tips/std",
    "pallet-utility/std",

    "pallet-randomness-provider/std",
    "pallet-poa/std",
    "pallet-poa-rpc-runtime-api/std",

    "patract-primitives/std",
    "patract-runtime-common/std",
    "patract-chain-extension/std",
]
