[package]
name = "jupiter-prep-runtime"
version = "0.1.0"
authors = ["Patract <https://github.com/patractlabs>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.1.0", default-features = false, features = ["derive"] }
log = { version = "0.4", default-features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
static_assertions = "1.1.0"

# Substrate primitives
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
sp-consensus-vrf = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
sp-staking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }

# Substrate pallets
frame-executive = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-democracy = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-im-online = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-identity = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-membership = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-offences = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-proxy = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-scheduler = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false, features = ["historical"] }
pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-treasury = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-bounties = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-tips = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }

# contracts
pallet-contracts = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }
pallet-contracts-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1", default-features = false }

# local pallets
pallet-randomness-provider = { path = "../../pallets/randomness-provider", default-features = false }
pallet-poa = { path = "../../pallets/poa", default-features = false }
pallet-poa-rpc-runtime-api = { path = "../../pallets/poa/rpc/runtime-api", default-features = false }

# local runtime
jupiter-primitives = { path = "../../primitives", default-features = false }
jupiter-runtime-common = { path = "../common", default-features = false }
jupiter-chain-extension = { path = "../../primitives/chain-extension", default-features = false, features = [ "native-support" ] }

[build-dependencies]
substrate-wasm-builder = "4.0.0"

[features]
default = ["std"]
std = [
  "codec/std",
  "log/std",
  "serde",

  "sp-api/std",
  "sp-authority-discovery/std",
  "sp-block-builder/std",
  "sp-consensus-babe/std",
  "sp-consensus-vrf/std",
  "sp-core/std",
  "sp-inherents/std",
  "sp-io/std",
  "sp-offchain/std",
  "sp-runtime/std",
  "sp-session/std",
  "sp-staking/std",
  "sp-std/std",
  "sp-transaction-pool/std",
  "sp-version/std",

  "frame-executive/std",
  "frame-support/std",
  "frame-system/std",
  "frame-system-rpc-runtime-api/std",

  "pallet-authority-discovery/std",
  "pallet-authorship/std",
  "pallet-babe/std",
  "pallet-balances/std",
  "pallet-collective/std",
  "pallet-contracts/std",
  "pallet-contracts-primitives/std",
  "pallet-contracts-rpc-runtime-api/std",
  "pallet-democracy/std",
  "pallet-grandpa/std",
  "pallet-im-online/std",
  "pallet-identity/std",
  "pallet-membership/std",
  "pallet-multisig/std",
  "pallet-offences/std",
  "pallet-proxy/std",
  "pallet-sudo/std",
  "pallet-scheduler/std",
  "pallet-session/std",
  "pallet-timestamp/std",
  "pallet-transaction-payment/std",
  "pallet-transaction-payment-rpc-runtime-api/std",
  "pallet-treasury/std",
  "pallet-bounties/std",
  "pallet-tips/std",
  "pallet-utility/std",

  "pallet-randomness-provider/std",
  "pallet-poa/std",
  "pallet-poa-rpc-runtime-api/std",

  "jupiter-primitives/std",
  "jupiter-runtime-common/std",
  "jupiter-chain-extension/std",
]
